; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_username_providers.c_prompt_for_username_creds.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_username_providers.c_prompt_for_username_creds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i32 }
%struct.TYPE_7__ = type { i32, i32 (%struct.TYPE_8__**, i32, i8*, i64, i32*)* }

@SVN_AUTH_PARAM_DEFAULT_USERNAME = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_8__**, %struct.TYPE_7__*, i32*, i8*, i64, i64, i32*)* @prompt_for_username_creds to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @prompt_for_username_creds(%struct.TYPE_8__** %0, %struct.TYPE_7__* %1, i32* %2, i8* %3, i64 %4, i64 %5, i32* %6) #0 {
  %8 = alloca %struct.TYPE_8__**, align 8
  %9 = alloca %struct.TYPE_7__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i8*, align 8
  store %struct.TYPE_8__** %0, %struct.TYPE_8__*** %8, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %9, align 8
  store i32* %2, i32** %10, align 8
  store i8* %3, i8** %11, align 8
  store i64 %4, i64* %12, align 8
  store i64 %5, i64* %13, align 8
  store i32* %6, i32** %14, align 8
  store i8* null, i8** %15, align 8
  %16 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %8, align 8
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %16, align 8
  %17 = load i64, i64* %12, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %7
  %20 = load i32*, i32** %10, align 8
  %21 = load i32, i32* @SVN_AUTH_PARAM_DEFAULT_USERNAME, align 4
  %22 = call i8* @svn_hash_gets(i32* %20, i32 %21)
  store i8* %22, i8** %15, align 8
  br label %23

23:                                               ; preds = %19, %7
  %24 = load i8*, i8** %15, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %26, label %40

26:                                               ; preds = %23
  %27 = load i32*, i32** %14, align 8
  %28 = call %struct.TYPE_8__* @apr_palloc(i32* %27, i32 8)
  %29 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %8, align 8
  store %struct.TYPE_8__* %28, %struct.TYPE_8__** %29, align 8
  %30 = load i32*, i32** %14, align 8
  %31 = load i8*, i8** %15, align 8
  %32 = call i32 @apr_pstrdup(i32* %30, i8* %31)
  %33 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %8, align 8
  %34 = load %struct.TYPE_8__*, %struct.TYPE_8__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %34, i32 0, i32 1
  store i32 %32, i32* %35, align 4
  %36 = load i32, i32* @TRUE, align 4
  %37 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %8, align 8
  %38 = load %struct.TYPE_8__*, %struct.TYPE_8__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %38, i32 0, i32 0
  store i32 %36, i32* %39, align 4
  br label %53

40:                                               ; preds = %23
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %42 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %41, i32 0, i32 1
  %43 = load i32 (%struct.TYPE_8__**, i32, i8*, i64, i32*)*, i32 (%struct.TYPE_8__**, i32, i8*, i64, i32*)** %42, align 8
  %44 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %8, align 8
  %45 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %46 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 8
  %48 = load i8*, i8** %11, align 8
  %49 = load i64, i64* %13, align 8
  %50 = load i32*, i32** %14, align 8
  %51 = call i32 %43(%struct.TYPE_8__** %44, i32 %47, i8* %48, i64 %49, i32* %50)
  %52 = call i32 @SVN_ERR(i32 %51)
  br label %53

53:                                               ; preds = %40, %26
  %54 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %54
}

declare dso_local i8* @svn_hash_gets(i32*, i32) #1

declare dso_local %struct.TYPE_8__* @apr_palloc(i32*, i32) #1

declare dso_local i32 @apr_pstrdup(i32*, i8*) #1

declare dso_local i32 @SVN_ERR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
